--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "socket.io": "^4.7.2",
     "tiktok-live-connector": "^1.0.5"
   },
@@ -16,5 +16,13 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mysnow90/TTsongrequest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mysnow90/TTsongrequest/issues"
+  },
+  "homepage": "https://github.com/mysnow90/TTsongrequest#readme"
 }
